2000-04-08  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* app/app_procs.c (app_init): Moved gtk_init outside #ifdef, moved
	if (argv) outside ifdefs.

2000-04-04  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* objects/standard/image.c (image_set_props): 
	Aspect ratio is back in town.

	* app/Makefile.am (dia_LDADD): 
	* acconfig.h: 
	* configure.in: 
	Check for gdk_pixbuf (by default disabled, for now)

	* app/render_eps.c (draw_image): 
	* app/render_libart.c (draw_image): 
	* app/render_gnomeprint.c (draw_image): 
	Support for alpha mask in rendering.  Color postscript, too.

	* lib/dia_image.c: 
	* lib/dia_image.h: 
	Support for gdk_pixbuf and proper masking for exports.

2000-04-01  Kjartan Maraas  <kmaraas@online.no>

	* sheets/*.sheets: Updated Norwegian translations.
	
2000-03-30  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* lib/text.c (text_insert_char): 
	* lib/render_store.c (add_data): 
	Made realloc double the alloced space rather than add
	a fixed amount, to reduce memory stress.

	* app/select.c: Added new select method 'Transitive'
	that select every reachable (by connections) object.

2000-03-27  Kjartan Maraas  <kmaraas@online.no>

	* dia.desktop: Added Norwegian translation.
	
2000-03-26  Alexander Larsson  <alla@lysator.liu.se>

	* app/render_eps.c:
	* app/render_svg.c:
	Don't dereference NULL pointer if the renderer
	couldn't open the file. Fix by Lars Clausen.
	Bug reported by Martin Chisholm <b1mt@unb.ca>
	
2000-03-26  Alexander Larsson  <alla@lysator.liu.se>

	* dia.desktop:
	* po/pt.po:
	Updated pt translation from Pedro Morais <pmmm@rnl.ist.utl.pt>

2000-03-25  Alexander Larsson  <alla@lysator.liu.se>

	* app/dia.gnorba (location_info):
	Changed to correct executable name.

2000-03-25  Alexander Larsson  <alla@lysator.liu.se>

 	* app/app_procs.c:
	Don't do any argument parsing or initialization
	if argv==NULL.

 	* app/dia_embedd.c:
	Call init_server_factroy before app_init.
	Call app_init with argv==NULL