@@ -100,7 +100,7 @@ dnl
 
 AC_MSG_CHECKING([whether gdk_pixbuf should be used])
 AC_ARG_ENABLE(gdk_pixbuf,
-[  --disable-gdk-pixbuf          disable gdk-pixbuf code],
+[  --disable-gdk-pixbuf          disable gdk-pixbuf code (use gdk-imlib)],
     GDK_PIXBUF=$enableval,
     GDK_PIXBUF=yes)
 AC_MSG_RESULT($GDK_PIXBUF)
@@ -116,6 +116,15 @@ fi
 
 AC_SUBST(GDK_PIXBUF_CFLAGS)
 AC_SUBST(GDK_PIXBUF_LIBS)
+
+dnl
+dnl Locate the imlib library
+dnl
+if test x$GDK_PIXBUF_CONFIG = xno; then
+  AM_PATH_GDK_IMLIB()
+fi
+AC_SUBST(GDK_IMLIB_LIBS)
+AC_SUBST(GDK_IMLIB_CFLAGS)
 
 dnl
 dnl libpng
@@ -188,13 +197,6 @@ else
 fi
 AC_SUBST(XML_LIBS)
 AC_SUBST(XML_CFLAGS)
-
-dnl
-dnl Locate the imlib library
-dnl
-AM_PATH_GDK_IMLIB()
-AC_SUBST(GDK_IMLIB_LIBS)
-AC_SUBST(GDK_IMLIB_CFLAGS)
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
